# D5.10_BenchQSmart-

./: CMakeLists.txt  Graph.cpp  Graph.h  README.md  main.cpp
cmake/: FindCPLEX.cmake  FindNLopt.cmake
coloring/: Branching.cpp  Branching.h  ConstraintHandler.cpp  ConstraintHandler.h  Pricer.cpp  Pricer.h  Probdata.cpp  Probdata.h  Vardata.cpp  Vardata.h  coloring.cpp  coloring.h
mwis/: LocalSearch.cpp  LocalSearch.h  cplex.cpp  greedy.cpp  mwis.h
quantum/: Hamiltonian.cpp  Hamiltonian.h
test_data/graphs_100/: Complete.mwis  Empty.mwis  GNP_0.1.mwis  GNP_0.3.mwis  GNP_0.5.mwis  Star.mwis  Tree.mwis
test_data/graphs_20/: Complete.mwis  Empty.mwis  GNP_0.1.mwis  GNP_0.3.mwis  GNP_0.5.mwis  Star.mwis  Tree.mwis
test_data/graphs_40/: GNP_0.1.mwis  GNP_0.2.mwis  GNP_0.3.mwis  GNP_0.4.mwis  GNP_0.5.mwis  GNP_0.6.mwis  GNP_0.7.mwis  GNP_0.8.mwis  GNP_0.9.mwis
test_data/graphs_400/: Complete.mwis  Empty.mwis  GNP_0.1.mwis  GNP_0.3.mwis  GNP_0.5.mwis  RandomRegular_10.mwis  RandomRegular_3.mwis  RandomRegular_5.mwis  Star.mwis  Tree.mwis
